--- a/time-series-manipulation.ipynb
+++ b/time-series-manipulation.ipynb
@@ -2016,10 +2016,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 137,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "month\n",
+       "1     0.532258\n",
+       "2     0.646018\n",
+       "3     0.588710\n",
+       "4     0.491667\n",
+       "5     0.274194\n",
+       "6     0.308333\n",
+       "7     0.088710\n",
+       "8     0.177419\n",
+       "9     0.291667\n",
+       "10    0.491935\n",
+       "11    0.591667\n",
+       "12    0.653226\n",
+       "Name: did_rain, dtype: float64"
+      ]
+     },
+     "execution_count": 137,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['did_rain'] = df.precipitation > 0\n",
+    "df.groupby('month').did_rain.mean()\n",
+    "# percentage of days it did rain per month"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "December has the most number of days with a non-zero amount of precipitation."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2030,11 +2065,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 138,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>delay</th>\n",
+       "      <th>distance</th>\n",
+       "      <th>origin</th>\n",
+       "      <th>destination</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2001-01-01 00:01:00</th>\n",
+       "      <td>14</td>\n",
+       "      <td>405</td>\n",
+       "      <td>MCI</td>\n",
+       "      <td>MDW</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2001-01-01 06:20:00</th>\n",
+       "      <td>0</td>\n",
+       "      <td>491</td>\n",
+       "      <td>BNA</td>\n",
+       "      <td>MCI</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2001-01-01 06:30:00</th>\n",
+       "      <td>-8</td>\n",
+       "      <td>251</td>\n",
+       "      <td>MDW</td>\n",
+       "      <td>STL</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     delay  distance origin destination\n",
+       "date                                                   \n",
+       "2001-01-01 00:01:00     14       405    MCI         MDW\n",
+       "2001-01-01 06:20:00      0       491    BNA         MCI\n",
+       "2001-01-01 06:30:00     -8       251    MDW         STL"
+      ]
+     },
+     "execution_count": 138,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "data.flights_20k()"
+    "df = data.flights_20k()\n",
+    "df = df.set_index('date').sort_index()\n",
+    "df.head(3)"
    ]
   },
   {
@@ -2048,25 +2158,282 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "**Convert any negative delays to 0.**"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 139,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>delay</th>\n",
+       "      <th>distance</th>\n",
+       "      <th>origin</th>\n",
+       "      <th>destination</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2001-01-01 00:01:00</th>\n",
+       "      <td>14</td>\n",
+       "      <td>405</td>\n",
+       "      <td>MCI</td>\n",
+       "      <td>MDW</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2001-01-01 06:20:00</th>\n",
+       "      <td>0</td>\n",
+       "      <td>491</td>\n",
+       "      <td>BNA</td>\n",
+       "      <td>MCI</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2001-01-01 06:30:00</th>\n",
+       "      <td>0</td>\n",
+       "      <td>251</td>\n",
+       "      <td>MDW</td>\n",
+       "      <td>STL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2001-01-01 07:00:00</th>\n",
+       "      <td>0</td>\n",
+       "      <td>361</td>\n",
+       "      <td>OAK</td>\n",
+       "      <td>ONT</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2001-01-01 07:00:00</th>\n",
+       "      <td>0</td>\n",
+       "      <td>303</td>\n",
+       "      <td>MSY</td>\n",
+       "      <td>HOU</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     delay  distance origin destination\n",
+       "date                                                   \n",
+       "2001-01-01 00:01:00     14       405    MCI         MDW\n",
+       "2001-01-01 06:20:00      0       491    BNA         MCI\n",
+       "2001-01-01 06:30:00      0       251    MDW         STL\n",
+       "2001-01-01 07:00:00      0       361    OAK         ONT\n",
+       "2001-01-01 07:00:00      0       303    MSY         HOU"
+      ]
+     },
+     "execution_count": 139,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# condition, value if true, value if false\n",
+    "df.delay = np.where(df.delay < 0, 0, df.delay)\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Which hour of the day has the highest average delay?**"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 140,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "date\n",
+       "2001-01-01 00:00:00    14.000000\n",
+       "2001-01-01 01:00:00          NaN\n",
+       "2001-01-01 02:00:00          NaN\n",
+       "2001-01-01 03:00:00          NaN\n",
+       "2001-01-01 04:00:00          NaN\n",
+       "                         ...    \n",
+       "2001-03-31 17:00:00    11.666667\n",
+       "2001-03-31 18:00:00    12.538462\n",
+       "2001-03-31 19:00:00    22.125000\n",
+       "2001-03-31 20:00:00    27.600000\n",
+       "2001-03-31 21:00:00    11.200000\n",
+       "Freq: H, Name: delay, Length: 2158, dtype: float64"
+      ]
+     },
+     "execution_count": 140,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.resample('H').delay.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "hour\n",
+       "0     127.916667\n",
+       "1     170.000000\n",
+       "3     302.500000\n",
+       "5       0.513514\n",
+       "6       2.494856\n",
+       "7       3.071932\n",
+       "8       4.030483\n",
+       "9       5.002504\n",
+       "10      5.850953\n",
+       "11      7.361495\n",
+       "12      9.214341\n",
+       "13     11.453311\n",
+       "14     10.747320\n",
+       "15     13.137592\n",
+       "16     13.881068\n",
+       "17     13.199580\n",
+       "18     14.514218\n",
+       "19     16.256557\n",
+       "20     17.889778\n",
+       "21     21.626768\n",
+       "22     32.704607\n",
+       "23     65.353846\n",
+       "Name: delay, dtype: float64"
+      ]
+     },
+     "execution_count": 141,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['hour'] = df.index.hour\n",
+    "df.groupby('hour').delay.mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3 am has the highest delays."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Does the day of the week make a difference in the delay amount?**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "week_day\n",
+       "Monday        7.165772\n",
+       "Saturday      8.431498\n",
+       "Tuesday       9.410866\n",
+       "Sunday       10.413542\n",
+       "Wednesday    11.032478\n",
+       "Thursday     12.821322\n",
+       "Friday       17.757596\n",
+       "Name: delay, dtype: float64"
+      ]
+     },
+     "execution_count": 142,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['week_day'] = df.index.day_name()\n",
+    "df.groupby('week_day').delay.mean().sort_values()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Yes, it does make a difference."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Does the month make a difference in the delay amount?**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "date\n",
+       "1    11.301592\n",
+       "2    12.306106\n",
+       "3     9.875287\n",
+       "Name: delay, dtype: float64"
+      ]
+     },
+     "execution_count": 143,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.groupby(df.index.month).delay.mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Yes, but the numbers are close."
+   ]
   }
  ],
  "metadata": {
