--- a/modeling-lesson.ipynb
+++ b/modeling-lesson.ipynb
@@ -2,21 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'mean_square_error' from 'sklearn.metrics' (/usr/local/anaconda3/lib/python3.8/site-packages/sklearn/metrics/__init__.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-86bf68735f73>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mdatetime\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mdatetime\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmetrics\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mmean_square_error\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;31m# default viz settings\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mImportError\u001b[0m: cannot import name 'mean_square_error' from 'sklearn.metrics' (/usr/local/anaconda3/lib/python3.8/site-packages/sklearn/metrics/__init__.py)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# imports\n",
     "import warnings\n",
@@ -30,7 +18,7 @@
     "import statsmodels.tsa.api as Holt\n",
     "\n",
     "from datetime import datetime\n",
-    "from sklearn.metrics import mean_square_error\n",
+    "from sklearn.metrics import mean_squared_error\n",
     "\n",
     "# default viz settings\n",
     "plt.rc('figure', figsize=(10, 8))\n",
