start on fb prophet

--- a/modeling-lesson-with-stock-data.ipynb
+++ b/modeling-lesson-with-stock-data.ipynb
@@ -1443,7 +1443,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x11f5d6a60>]"
+       "[<matplotlib.lines.Line2D at 0x126106070>]"
       ]
      },
      "execution_count": 30,
@@ -2463,7 +2463,7 @@
     "2. Add that average delta to the values during 2015.\n",
     "3. Set the index in your yhat dataframe to represent the dates those predictions are make for.\n",
     "\n",
-    "Let's get started....\n",
+    "Let's get started...\n",
     "\n",
     "**Re-split data**"
    ]
@@ -3124,14 +3124,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Conclusion\n",
+    "### Predict with FB Prophet\n",
+    "> Prophet is open source software released by Facebook’s Core Data Science team. It is available for download on CRAN and PyPI.\n",
+    "> \n",
+    "> Prophet is a procedure for forecasting time series data based on an additive model where non-linear trends are fit with yearly, weekly, and daily seasonality, plus holiday effects. It works best with time series that have strong seasonal effects and several seasons of historical data. Prophet is robust to missing data and shifts in the trend, and typically handles outliers well. According to Facebook, Prophet is \"robust to outliers, missing data, and dramatic changes in your time series.\n",
     "\n",
-    "Which model did the best?"
+    "I want to know if FB Prophet can predict the 2008 stock market crash. I'm curious to find out.\n",
+    "\n",
+    "**Re-prepare data:**\n",
+    "* dataframe\n",
+    "* 2 columns ONLY: ds and y\n",
+    "* ds is a datestamp column formatted as YYYY-MM-DD (date) or YYYY-MM-DD HH:MM:SS (timestamp)\n",
+    "* y must be numeric and represents the measurement we wish to forecast."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -3155,38 +3164,60 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>model_type</th>\n",
-       "      <th>target_var</th>\n",
-       "      <th>rmse</th>\n",
+       "      <th>price</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>date</th>\n",
+       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>holts_optimized</td>\n",
-       "      <td>price</td>\n",
-       "      <td>44.0</td>\n",
+       "      <th>2000-01-01</th>\n",
+       "      <td>57.7075</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2000-02-01</th>\n",
+       "      <td>56.4975</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         model_type target_var  rmse\n",
-       "10  holts_optimized      price  44.0"
+       "              price\n",
+       "date               \n",
+       "2000-01-01  57.7075\n",
+       "2000-02-01  56.4975"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "price_min_rmse = eval_df.groupby('target_var')['rmse'].min()[0]\n",
-    "\n",
-    "# find which model that is\n",
-    "eval_df[(eval_df.rmse == price_min_rmse)]"
+    "IBM.head(2)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "price    0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -3194,6 +3225,215 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Conclusion\n",
+    "\n",
+    "Which model did the best?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#price_min_rmse = eval_df.groupby('target_var')['rmse'].min()[0]\n",
+    "\n",
+    "# find which model that is\n",
+    "#eval_df[(eval_df.rmse == price_min_rmse)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's test it out on our out-of-sample data\n",
+    "\n",
+    "We will be using train + validate to predict test."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#yhat_df = validate + train.diff(12).mean()\n",
+    "#yhat_df.index = test.index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "unexpected indent (<ipython-input-59-dd6b0c780bbf>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-59-dd6b0c780bbf>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    plt.figure(figsize=(12,4))\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
+     ]
+    }
+   ],
+   "source": [
+    "#def final_plot(target_var):\n",
+    "    plt.figure(figsize=(12,4))\n",
+    "    plt.plot(train[target_var], label='train')\n",
+    "    plt.plot(validate[target_var], label='validate')\n",
+    "    plt.plot(test[target_var], label='test')\n",
+    "    plt.plot(yhat_df[target_var], alpha=.5)\n",
+    "    plt.title(target_var)\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#rmse_price = sqrt(mean_squared_error(test['price'], yhat_df['price']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#print('rmse-price: ', rmse_price)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#final_plot('price')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# to predict 2018\n",
+    "\n",
+    "#yhat_df = test + train.diff(12).mean()\n",
+    "\n",
+    "#yhat_df.index = test.index + pd.Timedelta('1Y')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#yhat_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#final_plot('price')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercises\n",
+    "\n",
+    "The end result of this exercise should be a Jupyter notebook named ```model```.\n",
+    "\n",
+    "Using <a href=\"https://ds.codeup.com/saas.csv\">saas.csv</a>, log data from API usage, ```store_item_sales```, or the ```vega_datasets``` stock data.\n",
+    "\n",
+    "1. Split data (train/test) and resample by any period, except daily, and aggregate using the sum.\n",
+    "2. Forecast, plot and evaluate using each of the 4 parametric based methods we discussed:\n",
+    "   * Simple Average\n",
+    "   * Moving Average\n",
+    "   * Holt's Linear Trend Model\n",
+    "   * Based on previous year/month/etc., this is up to you.\n",
+    "\n",
+    "Optional: Using store item demand\n",
+    "1. Predict 2018 total monthly sales for a single store and/or item by creating a model using prophet.\n",
+    "2. Return a dataframe with the month, store_id, y-hat, and the confidence intervals (y-hat lower, y-hat upper).\n",
+    "3. Plot the 2018 monthly sales predictions."
+   ]
   }
  ],
  "metadata": {
